added body parser

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Eric Ferraiuolo <eferraiuolo@gmail.com>",
   "license": "BSD",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0"
   }
