--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
-    "node-telegram-bot-api": "^0.20.1"
+    "node-telegram-bot-api": "^0.20.1",
+    "socket.io": "^1.4.5",
+    "supervisor": "^0.9.1"
   }
 }
