--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "angular-web-notification": "0.0.91",
     "body-parser": "^1.14.2",
+    "dotenv": "^8.2.0",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "node-telegram-bot-api": "^0.20.1",
